--- a/src/css/base/body.css
+++ b/src/css/base/body.css
@@ -1,3 +1,13 @@
 body {
   @apply antialiased;
 }
+
+main {
+  a:link {
+    @apply text-blue-700;
+  }
+
+  a:hover {
+    @apply text-blue-500;
+  }
+}
