--- a/app/views/partials/lib/users/validate.liquid
+++ b/app/views/partials/lib/users/validate.liquid
@@ -6,23 +6,23 @@
   assign errors = '{}' | parse_json
 
   if object.email == null or object.email == empty
-    assign errors = errors | add_hash_key: "email", CANT_BE_BLANK
+    include 'lib/register_error', hash: errors, field_name: 'email', key: 'app.errors.blank'
   else
     graphql emails_count = 'users/emails_count', email: object.email | dig: 'users', 'total_entries'
     if emails_count > 0
-      assign errors = errors | add_hash_key: "email", EMAIL_ALREADY_TAKEN
+      include 'lib/register_error', hash: errors, field_name: 'email', key: 'app.errors.taken'
     endif
   endif
 
-
   if object.password == null or object.password == empty
-    assign errors = errors | add_hash_key: "password", CANT_BE_BLANK
+    include 'lib/register_error', hash: errors, field_name: 'password', key: 'app.errors.blank'
   endif
 
   if errors != empty
     assign valid = false
   endif
-  assign object = object | add_hash_key: 'errors', errors
-  assign object = object | add_hash_key: 'valid', valid
+
   export object
+  export errors, namespace: "object"
+  export valid,  namespace: "object"
 %}
