--- a/app/views/partials/theme/simple/layout/head.liquid
+++ b/app/views/partials/theme/simple/layout/head.liquid
@@ -6,4 +6,4 @@
 
 <link rel="stylesheet" href="{{ 'css/app.css' | asset_url }}">
 
-<title>MVP Marketplace</title>
+<title>{{ 'app.title' | t }}</title>
