--- a/app/views/partials/theme/simple/items/edit.liquid
+++ b/app/views/partials/theme/simple/items/edit.liquid
@@ -1,5 +1,5 @@
-<div class="container flex flex-wrap items-centermx-auto">
-  <h1 class="text-3xl font-medium text-gray-900 title-font">Edit Item</h1>
+<div class="container flex flex-wrap items-center mx-auto">
+  <h1 class="text-3xl font-medium">Edit Item</h1>
 </div>
 
 {% include 'theme/simple/items/form', item: item %}
