--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -1,6 +1,6 @@
 <header class="text-gray-700 body-font">
   <div class="container flex flex-col flex-wrap items-center py-5 mx-auto md:flex-row">
-    <a class="flex items-center mb-4 font-medium text-gray-900 title-font md:mb-0" href="/">
+    <a class="flex items-center mb-4 font-medium text-gray-900  md:mb-0" href="/">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
         stroke-linejoin="round" stroke-width="2" class="w-10 h-10 p-2 text-white bg-blue-500 rounded-full"
         viewBox="0 0 24 24">
