--- a/app/views/partials/theme/simple/orders/form.liquid
+++ b/app/views/partials/theme/simple/orders/form.liquid
@@ -7,7 +7,7 @@
 %}
 
 <!-- `role` does not exist -->
-<h1 class="mb-8 text-3xl font-medium text-gray-900 title-font">
+<h1 class="mb-8 text-3xl font-medium">
   <a href="/dashboard">{{ 'app.dashboard' | t }}</a>
   <!-- / {{ 'app.' | append: role | t }} -->
   / {{ 'app.orders' | t }}
