--- a/app/views/partials/theme/simple/dashboard/orders/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/index.liquid
@@ -1,4 +1,4 @@
-<h1 class="mb-8 text-3xl font-medium text-gray-900 title-font">
+<h1 class="mb-6 text-3xl font-medium">
   <a href="/dashboard">{{ 'app.dashboard' | t }}</a>
   / {{ 'app.' | append: role | t }}
   / {{ 'app.orders' | t }}
