--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -11,12 +11,12 @@
       </div>
 
       <div class="w-full mt-6 lg:w-1/2 lg:pl-10 lg:py-6 lg:mt-0">
-        <h2 class="text-sm tracking-widest text-gray-500 title-font">
+        <h2 class="text-sm tracking-widest text-gray-500 ">
           {% include 'theme/simple/business_card', user: item.properties.owner %}
         </h2>
 
-        <h1 class="flex justify-between mb-1 text-3xl font-medium text-gray-900 title-font">
-          <span>{{ item.properties.name }}</span>
+        <h1 class="mb-1 text-3xl font-medium">
+          {{ item.properties.name }}
         </h1>
 
         <div class="flex flex-wrap mb-4">
@@ -33,7 +33,7 @@
         <p class="mt-4 leading-relaxed">{% print item.properties.description %}</p>
 
         <div class="flex">
-          <span class="text-2xl font-medium text-gray-900 title-font">{{ item.properties.price | pricify }}</span>
+          <span class="text-2xl font-medium text-gray-900 ">{{ item.properties.price | pricify }}</span>
 
           <form action="/orders/new" method="get" class="ml-auto ">
             <input type="hidden" name="item_id" value="{{ item.id }}">
