--- a/app/views/partials/theme/simple/layout/footer.liquid
+++ b/app/views/partials/theme/simple/layout/footer.liquid
@@ -1,6 +1,6 @@
 <footer class="text-gray-700 body-font">
   <div class="container flex flex-col items-center py-8 mx-auto sm:flex-row">
-    <a class="flex items-center justify-center font-medium text-gray-900 title-font md:justify-start">
+    <a class="flex items-center justify-center font-medium text-gray-900  md:justify-start">
       <span class="text-xl">MVP Marketplace</span>
     </a>
     <p class="mt-4 text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0">© 2020 platformOS —
