Little link fix

--- a/src/css/base/body.css
+++ b/src/css/base/body.css
@@ -7,7 +7,7 @@ main a[href] {
   @apply text-blue-700;
 }
 
-main a:hover {
+main a[href]:hover {
   @apply text-blue-600;
 }
 /* purgecss end ignore */
