--- a/app/views/partials/lib/items/validate.liquid
+++ b/app/views/partials/lib/items/validate.liquid
@@ -3,12 +3,15 @@
 <!-- convert tags -->
 {% parse_json item %}
   {
+    "id": {{ item.id | json }},
     "properties": {
+      "name": {{ item.properties.name | json }},
       "tags": {{ item.properties.tags | split: ',' }},
-      "owner": {{ current_user_id | json }}, 
+      "owner": {{ owner | json }},
       "description": {{ item.properties.description | default: "" | json }},
       "type": {{ item.properties.type | default: "" | json }},
-      "price": {{ item.properties.price | plus: 0 }}
+      "price": {{ item.properties.price | plus: 0 }},
+      "uuid": {{ item.properties.uuid | json }}
     }
   }
 {% endparse_json %}
@@ -16,6 +19,11 @@
 {% liquid
   assign valid = true
   assign errors = '{ "properties": {}}' | parse_json
+
+  if item.properties.owner == "" or item.properties.owner == null
+    assign valid = false
+    include 'lib/register_error', hash: errors.properties, field_name: 'owner', key: 'app.errors.blank'
+  endif
 
   if item.properties.name == "" or item.properties.name == null
     assign valid = false
