--- a/app/views/partials/theme/simple/dashboard/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/index.liquid
@@ -8,13 +8,13 @@
           </div>
           <div class="flex-grow">
             <h2 class="mb-3 text-xl font-medium text-gray-900 ">{{ 'app.selling' | t }}</h2>
-            <a class="inline-flex items-center mt-3 text-indigo-500" href="/dashboard/sell/orders">Your orders
+            <a class="inline-flex items-center mt-3 text-indigo-500" href="/dashboard/sell/orders">{{ 'app.your-orders' | t }}
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
               </svg>
             </a>
             <br>
-            <a class="inline-flex items-center mt-3 text-indigo-500" href="/dashboard/sell/items">Your items
+            <a class="inline-flex items-center mt-3 text-indigo-500" href="/dashboard/sell/items">{{ 'app.your-items' | t }}
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
               </svg>
