--- a/app/views/partials/theme/simple/dashboard/orders/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/index.liquid
@@ -1,7 +1,7 @@
 <h1 class="mb-6 text-3xl font-medium">
   <a href="/dashboard">{{ 'app.dashboard' | t }}</a>
   / {{ 'app.' | append: role | t }}
-  / {{ 'app.orders' | t }}
+  / {{ 'app.orders.list' | t }}
 </h1>
 
 <table class="w-full table-auto">
