--- a/app/views/partials/lib/events/create-event.liquid
+++ b/app/views/partials/lib/events/create-event.liquid
@@ -1,8 +1,8 @@
-{% background "bg-task-name", type: type, object_id: object_id, actor_id: actor_id %}
+{% background "bg-task-name", type: type, object_id: object_id, actor_id: actor_id, target_id: target_id %}
 {% liquid
   assign registry = 'event'
 
-  include 'lib/events/build', type: type, actor_id: actor_id, object_id: object_id, registry: registry
+  include 'lib/events/build', type: type, actor_id: actor_id, object_id: object_id, target_id: target_id, registry: registry
   include 'lib/events/validate', event: context.exports[registry]
 
   if context.exports[registry].valid
