--- a/app/views/partials/lib/orders/search.liquid
+++ b/app/views/partials/lib/orders/search.liquid
@@ -1,10 +1,11 @@
 {% liquid
-  graphql orders = 'orders/search', limit: 100, buyer: buyer, item_id: item_id, status: status | fetch: 'orders'
 
   if id
     graphql order  = 'orders/search', id: id, limit: 1 | fetch: 'orders' | fetch: 'results' | first
     export order
+  else
+    graphql orders = 'orders/search', limit: 100, buyer: buyer, item_id: item_id, status: status | fetch: 'orders'
+    export orders
   endif
 
-  export orders
 %}
