--- a/app/views/partials/theme/simple/dashboard/items/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/items/index.liquid
@@ -4,4 +4,20 @@
   / {{ 'app.items' | t }}
 </h1>
 
-{% include 'theme/simple/items/index', items: items %}
+<section class="text-gray-700 body-font">
+  <div class="container mx-auto">
+    <div class="flex flex-wrap -mx-4 cards">
+      {% if items.results.size > 0 %}
+      {% for item in items.results %}
+        {% include 'theme/simple/items/card', item: item %}
+      {% endfor %}
+      {% else %}
+        <p class="container my-8 text-lg text-center">
+          <a href="/items/new" class="border-2 rounded p-2">
+            {{ 'app.dashboard-items.list-your-first-item' | t }}
+          </a>
+        </p>
+      {% endif %}
+    </div>
+  </div>
+</section>
