--- a/app/views/partials/theme/simple/dashboard/orders/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/index.liquid
@@ -10,11 +10,11 @@
       <tr>
         <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.created_at" | t }}</th>
         <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.item_id" | t }}</th>
-        <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.buyer" | t }}</th>
         <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.seller" | t }}</th>
+        <th class="px-4 py-2 text-lg font-medium text-left"></th>
+        <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.buyer" | t }}</th>
         <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.status" | t }}</th>
         <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.total" | t }}</th>
-        <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.paid_at" | t }}</th>
       </tr>
     </thead>
     <tbody>
@@ -22,10 +22,14 @@
         <tr>
           <td class="px-4 py-2 border-b">{{ order.created_at | l }}</td>
           <td class="px-4 py-2 border-b"><a href="/items/show?id={{ order.properties.item_id }}">{{ order.item.properties.name }}</a></td>
-          <td class="px-4 py-2 border-b">{{ order.properties.buyer }}</td>
           <td class="px-4 py-2 border-b">{{ order.properties.seller }}</td>
+          <td class="px-1 py-1 border-b">=></td>
+          <td class="px-4 py-2 border-b">{{ order.properties.buyer }}</td>
           <td class="px-4 py-2 border-b">
-            {{ order.order_status.properties.status | default: 'app.order_statuses.pending_payment' | t }}
+            {{ order.order_status.properties.status | default: 'missing-state-invalid-order' | t }}
+            {% if  order.order_status.properties.timestamp %}
+            <br/><small>{{ order.order_status.properties.timestamp | to_time | l }}</small>
+            {% endif %}
           </td>
           <td class="px-4 py-2 border-b">{{ order.properties.total | pricify }}</td>
           <td class="px-4 py-2 border-b">
