--- a/app/views/pages/items/create.liquid
+++ b/app/views/pages/items/create.liquid
@@ -3,12 +3,14 @@ method: post
 ---
 {% liquid
   include 'lib/must_be_authenticated'
-  include 'lib/items/validate', item: params.item, owner: context.session.current_user_id
+  include 'lib/items/validate', item: params.item, owner: context.current_user.id
 
   if context.exports.item.valid
     include 'lib/items/save', item: context.exports.item
+    include 'lib/events/create-event', type: 'item_created', actor_id: context.current_user.id, object_id: context.exports.item.id
+
+    session flash_notice = 'app.orders.placed'
     include 'async-operation', uuid: context.exports.last_operation_uuid, success: '/'
-    include 'lib/events/create-event', type: 'item_created', actor_id: context.session.current_user_id, object_id: context.exports.item.id
   else
     include 'lib/items/data_new'
     include 'theme/simple/items/new', item: context.exports.item
