--- a/app/views/partials/lib/users/search.liquid
+++ b/app/views/partials/lib/users/search.liquid
@@ -1,10 +1,11 @@
 {% liquid
-  graphql users = 'users/search', limit: 100 | fetch: 'users'
 
   if id
     graphql user  = 'users/search', id: id, limit: 1 | fetch: 'users' | fetch: 'results' | first
     export user
+  else
+    graphql users = 'users/search', limit: 100 | fetch: 'users'
+    export users
   endif
 
-  export users
 %}
