--- a/app/views/partials/theme/simple/layout/main.liquid
+++ b/app/views/partials/theme/simple/layout/main.liquid
@@ -2,6 +2,8 @@
   {% include 'theme/simple/layout/header' %}
 
   <main>
+    {% include 'lib/flash/display' %}
+
     {{ content_for_layout }}
   </main>
 
