--- a/app/views/pages/dashboard/sell/items/index.liquid
+++ b/app/views/pages/dashboard/sell/items/index.liquid
@@ -1,4 +1,4 @@
 {% liquid
-  include 'lib/dashboard/items', limit: 100, seller: context.session.current_user_id
+  include 'lib/dashboard/items', limit: 100, seller: context.current_user.id
   include 'theme/simple/dashboard/items/index', items: context.exports.items, role: 'seller'
 %}
