--- a/app/views/pages/dashboard/sell/orders/index.liquid
+++ b/app/views/pages/dashboard/sell/orders/index.liquid
@@ -1,4 +1,4 @@
 {% liquid
-  include 'lib/dashboard/orders', limit: 100, seller: context.session.current_user_id
+  include 'lib/dashboard/orders', limit: 100, seller: context.current_user.id
   include 'theme/simple/dashboard/orders/index', orders: context.exports.orders, role: 'seller'
 %}
