--- a/app/views/pages/order_statuses/create.liquid
+++ b/app/views/pages/order_statuses/create.liquid
@@ -7,11 +7,11 @@ slug: order_statuses/create
   assign registry = 'order_status'
 
   include 'lib/orders/search', id: context.params.order_id
-  include 'lib/order_statuses/validate', order: context.exports.order, current_user_id: context.session.current_user_id, status: context.params.status, registry: registry
+  include 'lib/order_statuses/validate', order: context.exports.order, current_user_id: context.current_user.id, status: context.params.status, registry: registry
 
   if context.exports[registry].valid
     include 'lib/order_statuses/create', object: context.exports[registry].object, registry: registry
-    include 'lib/events/create-event', type: 'order_status_created', actor_id: context.session.current_user_id, target_id: context.exports[registry].object.properties.order_id, object_id: context.exports[registry].object.id
+    include 'lib/events/create-event', type: 'order_status_created', actor_id: context.current_user.id, target_id: context.exports[registry].object.properties.order_id, object_id: context.exports[registry].object.id
     include 'async-operation', uuid: context.exports.last_operation_uuid, success: '/dashboard/buy/orders'
   else
     echo 'failed'
