fix owner on item card/show

--- a/app/views/partials/theme/simple/items/card.liquid
+++ b/app/views/partials/theme/simple/items/card.liquid
@@ -30,7 +30,7 @@
       </p>
 
       <h3 class="mb-1 text-xs text-gray-500 ">
-        {% include 'theme/simple/business_card', user: item.properties.owner %}
+        {% include 'theme/simple/business_card', user: item.owner.email %}
       </h3>
     </div>
   </div>
